[tool.poetry]
name = "ssh-mock"
version = "0.1.0"
description = "Mocks an SSH Server"
authors = ["DanielHabenicht <daniel-habenicht@outlook.de>"]
include = ["mock-ssh/server_key"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests",
]
repository = "https://github.com/DanielHabenicht/mock-ssh.git"
homepage = "https://github.com/DanielHabenicht/mock-ssh.git"
keywords = [
    "SSH",
    "Server",
    "Mocking",
    "Mock",
    "Testing",
]

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "3.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pylint = "^2.6.0"
isort = "^5.6.4"
pytest = "^6.1.2"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable="""
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
"""
